--- a/tasks/cron.yml
+++ b/tasks/cron.yml
@@ -2,12 +2,22 @@
 - name: Setup pipe crons
   cron:
     name: "Backup command to {{ item.dest }}"
-    special_time: "{{ item.freq | default(weekly) }}"
+    # Default cron: daily
+    minute: "{{ item.minute | default(0) }}"
+    hour: "{{ item.hour | default(0) }}"
+    day: "{{ item.day | default('*') }}"
+    month: "{{ item.month | default('*') }}"
+    weekday: "{{ item.weekday | default('*') }}"
     job: "{{ item.command }} | aws s3 cp - s3://{{ aws_bucket_name }}/{{ item.dest }}"
   with_items: "{{ backup_pipes }}"
 - name: Setup sync crons
   cron:
     name: "Backup sync to {{ item.dest }}"
-    special_time: "{{ item.freq | default(weekly) }}"
+    # Default cron: daily
+    minute: "{{ item.minute | default(0) }}"
+    hour: "{{ item.hour | default(0) }}"
+    day: "{{ item.day | default('*') }}"
+    month: "{{ item.month | default('*') }}"
+    weekday: "{{ item.weekday | default('*') }}"
     job: "aws s3 sync {{ item.src }} s3://{{ aws_bucket_name }}/{{ item.dest }}"
   with_items: "{{ backup_syncs }}"
